--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.0",
     "next": "15.5.4",
     "phaser": "^3.90.0",
     "react": "19.1.0",
@@ -17,6 +18,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "prisma": "^6.4.0",
     "typescript": "^5"
   }
 }
