--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.0",
+    "@supabase/supabase-js": "^2.75.0",
     "next": "15.5.4",
     "phaser": "^3.90.0",
     "react": "19.1.0",
